# srrc_simple_obj_detector

./: CMakeLists.txt  README.md  package.xml  simple_detector_node.launch  test_simple_detector_node.cpp  test_simple_detector_node.launch
msg/: DetectorResult.msg
